# insta-mockup

./: .gitignore  .pre-commit-config.yaml  .replit  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_US2.md  Makefile  PHASE_1_NEXT_STEPS.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_TODOS.md  US1_IMPLEMENTATION_SUMMARY.md  US2_IMPLEMENTATION_SUMMARY.md  US4_IMPLEMENTATION.md  VALIDATION_REPORT.md  drizzle.config.ts  netlify.toml  package-lock.json  package.json  replit.md  spec.md  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: copilot-instructions.md
.github/scripts/: backend-prechecks.sh
.github/workflows/: pre-commit.yaml  test-suite.yaml
backend/: .env.example  auth.py  check_no_dev_credentials.py  config.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  reset_db.py  test_api_videos.py  validators.py  verify_sessions.py
backend/insta_mockup_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/routes/: accounts.py  comments.py  experiments.py  feed.py  instagram.py  interactions.py  projects.py  storage.py  videos.py
backend/tests/: conftest.py  helpers.py  test_accounts.py  test_auth.py  test_comments.py  test_dev_user.py  test_dev_user_removal.py  test_experiments.py  test_feed.py  test_instagram.py  test_interactions.py  test_lock_semantics.py  test_projects.py  test_results.py  test_security_config.py  test_storage.py  test_us2_session_resume.py  test_videos.py
backend/uploads/: d50110a1-ca98-4f8a-a610-785b57d07eb1.tmp
client/: index.html
client/src/: App.tsx  (+1 more)
frontend/: .env.example  index.html  package-lock.json  package.json  test_output.txt  vite.config.ts
functions/: api.ts
migrations/: 0000_zippy_gravity.sql  0001_faithful_sir_ram.sql  0002_flawless_spyke.sql
server/: app.ts  auth.ts  db.ts  index.ts  instagram.ts  objectStorage.ts  openai.ts  routes.test.ts  routes.ts  storage.ts
shared/: schema.ts
summaries/: DEV_USER_REMOVAL.md  IMPLEMENTATION_SUMMARY_AI_COMMENTS.md  PHASE_1_NEXT_STEPS.md  SECURITY_ANALYSIS.md  SECURITY_TODOS.md
uploads/: 74d1425d-1cc6-489a-83c2-707d2067a628.tmp  ffc1c44c-3c79-4b3e-8ee9-2867db2c072e.tmp
(+65 files in other folders)
