[project]
name = "insta-mockup-backend"
version = "0.1.0"
description = "FastAPI backend for the Insta Mockup experimental reels feed"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "psycopg2-binary",
  "passlib[bcrypt]",
  "python-multipart",
  "python-jose[cryptography]",
  "boto3",
  "httpx",
  "requests",
  "itsdangerous",
  "rocketapi",
  "pyjwt>=2.10.1",
  "pwdlib[argon2]>=0.3.0",
  "slowapi>=0.1.9",
  "bleach>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff==0.4.1",
    "pyright>=1.1.390",
    "bandit>=1.9.2",
    "pre-commit>=4.5.1",
]

[tool.pyright]
include = ["."]
exclude = ["tests", "**/__pycache__", ".venv", "venv", "htmlcov"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
